--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form action="">
-        <label for="">Name</label>
-        <input type="text">
-    </form>
+    <h1 >Hello </h1>
+
+    <button>Click me</button>
+
+   <script src="index.js"></script>
 </body>
 </html>
